--- a/UniEatsFrontend/package.json
+++ b/UniEatsFrontend/package.json
@@ -22,6 +22,9 @@
     "@angular/ssr": "^19.2.1",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "glob": "^11.0.1",
+    "lru-cache": "^11.0.2",
+    "rimraf": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -30,15 +33,15 @@
     "@angular-devkit/build-angular": "^19.2.1",
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^5.0.0",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^22.13.9",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "^5.8.2"
   }
 }
